--- a/.github/workflows/testsAndBuild.yaml
+++ b/.github/workflows/testsAndBuild.yaml
@@ -1,8 +1,12 @@
-# .github/workflows/tests.yml
-
 name: Tests Jest et Build de l'image
 
-on: push
+on:
+  pull_request:
+    branches:
+      - main
+  push:
+    branches-ignore:
+      - main
 
 jobs:
   build:
@@ -13,20 +17,24 @@ jobs:
       packages: write # Pour ajouter l'image à la fin du proc
 
     steps:
-    - name: Checkout du code
-      uses: actions/checkout@v4
+      - name: Checkout du code
+        uses: actions/checkout@v4
 
-    - name: Configuration de Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-    
-    - name: Installation des dépendances
-      run: npm install
+      - name: Configuration de Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+      
+      - name: Installation des dépendances
+        run: npm install
 
-    - name: Exécution des tests
-      run: npm test
+      - name: Exécution des tests
 
-    # SI les tests sont OK
-    - name: Construction de l'image Docker
-      run: docker build -t bot-trainer-app .
+        run: npm test
+
+      - name: Construction de l'image Docker
+        # run: docker build -t bot-trainer-app .
+        
+        run: echo "Les tests sont passés avec succès !"
+
+   
