update workflow- Launch on PR

--- a/.github/workflows/vercelPreviewDeployement.yaml
+++ b/.github/workflows/vercelPreviewDeployement.yaml
@@ -1,5 +1,6 @@
-name: Vercel Production Deployment
+name: Vercel Prevew Deployment
 env:
+  VERCEL_ENVIRONMENT: preview
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
