--- a/.github/workflows/vercelPreviewDeployement.yaml
+++ b/.github/workflows/vercelPreviewDeployement.yaml
@@ -19,4 +19,4 @@ jobs:
       - name: Build Project Artifacts
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy Project Artifacts to Vercel
-        run: npx vercel deploy --prebuilt --no-wait --token=${{ secrets.VERCEL_TOKEN }}
+        run: npx vercel deploy --token=${{ secrets.VERCEL_TOKEN }} --prebuilt
