--- a/.github/workflows/testsAndBuild.yaml
+++ b/.github/workflows/testsAndBuild.yaml
@@ -1,9 +1,6 @@
 name: Tests Jest et Build de l'image
 
 on:
-  pull_request:
-    branches:
-      - main
   push:
     branches-ignore:
       - main
@@ -14,7 +11,6 @@ jobs:
 
     permissions:
       contents: read
-      packages: write # Pour ajouter l'image à la fin du proc
 
     steps:
       - name: Checkout du code
@@ -29,12 +25,9 @@ jobs:
         run: npm install
 
       - name: Exécution des tests
-
         run: npm test
 
-      - name: Construction de l'image Docker
-        # run: docker build -t bot-trainer-app .
-        
+      - name: Finalisation
         run: echo "Les tests sont passés avec succès !"
 
    
