--- a/.github/workflows/vercelPreviewDeployement.yaml
+++ b/.github/workflows/vercelPreviewDeployement.yaml
@@ -17,6 +17,6 @@ jobs:
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
-        run: vercel build --preview --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy Project Artifacts to Vercel
         run: npx vercel deploy --prebuilt --no-wait --token=${{ secrets.VERCEL_TOKEN }}
