--- a/.github/workflows/vercelProdDeployement.yaml
+++ b/.github/workflows/vercelProdDeployement.yaml
@@ -19,6 +19,6 @@ jobs:
       - name: Build Project Artifacts
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy Project Artifacts to Vercel
-        run: npx vercel deploy --no-wait --token=${{ secrets.VERCEL_TOKEN }}
+        run: npx vercel --prod --token=${{ secrets.VERCEL_TOKEN }}
       - name: Construction de l'image Docker
         run: docker build -t bot-trainer-app .
